feat(api): more validator routes
